welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: value &&! is not a member of Boolean
while (!estSurBiscuit()&&!estfaceLur()){
                       ^